--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -3,7 +3,7 @@
 ---------------------------------------*/
 /*
 Italic text, used to convey a change
-of in voice or mood.
+in voice or mood.
 */
 i {
   font-style: italic;
@@ -22,7 +22,7 @@ Small text, used for fine-print or copy-
 right notices, does not make the text
 less important.
 */
-small {
+small{
   font-size: $font-small;
 }
 
