--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -95,71 +95,71 @@ ul.plain li {
   list-style: none;
 }
 
-p > a,
-h1 > a,
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a,
-li.link > a {
+p a,
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a,
+li.link a {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-color: $color-base-3;
 }
 
-.dark p > a,
-.dark h1 > a,
-.dark h2 > a,
-.dark h3 > a,
-.dark h4 > a,
-.dark h5 > a,
-.dark h6 > a,
-.dark li.link > a {
+.dark p a,
+.dark h1 a,
+.dark h2 a,
+.dark h3 a,
+.dark h4 a,
+.dark h5 a,
+.dark h6 a,
+.dark li.link a {
   border-color: $color-base-7;
 }
 
-h1 > a,
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
   border-bottom-width: 4px;
 }
 
-p > a:hover,
-h1 > a:hover,
-h2 > a:hover,
-h3 > a:hover,
-h4 > a:hover,
-h5 > a:hover,
-h6 > a:hover,
-li.link:hover > a {
+p a:hover,
+h1 a:hover,
+h2 a:hover,
+h3 a:hover,
+h4 a:hover,
+h5 a:hover,
+h6 a:hover,
+li.link:hover a {
   border-color: $color-black;
 }
 
-.dark p > a:hover,
-.dark h1 > a:hover,
-.dark h2 > a:hover,
-.dark h3 > a:hover,
-.dark h4 > a:hover,
-.dark h5 > a:hover,
-.dark h6 > a:hover,
-.dark li.link:hover > a {
+.dark p a:hover,
+.dark h1 a:hover,
+.dark h2 a:hover,
+.dark h3 a:hover,
+.dark h4 a:hover,
+.dark h5 a:hover,
+.dark h6 a:hover,
+.dark li.link:hover a {
   border-color: $color-base-1;
 }
 
-p > a.icon {
+p a.icon {
   border: none;
 }
 
-p > a.icon > img {
+p a.icon > img {
   width: 2rem;
   transition: $transition-default;
 }
 
-p > a.icon:hover > img {
+p a.icon:hover > img {
   opacity: 0.8;
 }
 
