--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -69,7 +69,7 @@ p {
   margin-bottom: 1.6rem;
 }
 
-p.small {
+p.small, span.small {
   font-size: $font-small;
   line-height: $line-height-small;
 }
