--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -296,3 +296,56 @@ code {
   border-radius: 0.2rem;
   white-space: nowrap;
 }
+
+/*---------------------------------------
+	Typographical elements
+---------------------------------------*/
+/*
+Italic text, used to convey a change
+in voice or mood.
+*/
+i {
+  font-style: italic;
+}
+
+/*
+Bold text, used to draw attention without
+changing the importance, voice or mood.
+*/
+b {
+  font-weight: bold;
+}
+
+/*
+Emphasized text, used to stress emphasis.
+Changes the meaning of a sentence, depen-
+ding on what word(s) it's applied to.
+Does not convey a different voice or mood
+neither does it make the text more impor-
+tant.
+*/
+em {
+  font-style: italic;
+  font-weight: bold;
+  letter-spacing: 0.07rem;
+}
+
+/*
+Important text, used to give a sense of
+urgency and seriousness.
+*/
+strong {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.07rem;
+}
+
+/*
+Small text, used for fine-print or copy-
+right notices, does not make the text
+less important.
+*/
+small {
+  font-size: $font-small;
+}
+/*-------------------------------------*/
