--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -1,164 +1,15 @@
 /*---------------------------------------
-	Typographical elements
----------------------------------------*/
-/*
-Italic text, used to convey a change
-in voice or mood.
-*/
-i {
-  font-style: italic;
-}
-
-/*
-Bold text, used to draw attention without
-changing the importance, voice or mood.
-*/
-b {
-  font-weight: bold;
-}
-
-/*
-Small text, used for fine-print or copy-
-right notices, does not make the text
-less important.
-*/
-small{
-  font-size: $font-small;
-}
-
-/*
-Emphasized text, used to stress emphasis.
-Changes the meaning of a sentence, depen-
-ding on what word(s) it's applied to.
-Does not convey a different voice or mood
-neither does it make the text more impor-
-tant.
-*/
-em {
-  font-style: normal;
-  font-weight: bold;
-  letter-spacing: 0.05rem;
-}
-
-/*
-Important text, used to give a sense of
-urgency and seriousness.
-*/
-strong {
-}
-/*-------------------------------------*/
-
-/*---------------------------------------
-	Handwriting
----------------------------------------*/
-.handwriting {
-  font-family: 'Caveat' !important;
-}
-/*-------------------------------------*/
-
-.no-margin {
-  margin: 0;
-}
-
-/*---------------------------------------
-	Set element position to relative
----------------------------------------*/
-.relative {
-  position: relative;
-}
-/*-------------------------------------*/
-
-/*---------------------------------------
-	Hide on mobile screens
----------------------------------------*/
-@media (max-width: 800px) {
-  .hide-on-mobile {
-    display: none;
-  }
-}
-/*-------------------------------------*/
-
-/*---------------------------------------
-	Contact Cards
----------------------------------------*/
-.contacts-filter-button {
-  margin: 0.5rem;
-}
-
-.contacts {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: masonry;
-  grid-gap: 2rem;
-
-  @media (max-width: 800px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (max-width: 400px) {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .contact-card {
-    padding: 0 0.75rem;
-    border-radius: $radius-3;
-    text-align: center;
-    box-shadow: $shadow-level-3;
-
-    &.hide {
-      display: none;
-    }
-
-    h2 {
-      line-height: 0;
-    }
-
-    .cover {
-      padding: 2rem 2rem 0 2rem;
-
-      img {
-        width: 100%;
-        max-width: 50vw;
-      }
-    }
-
-    .content {
-      padding: 1rem 0;
-      p {
-        margin: 0;
-      }
-
-      .title {
-        font-weight: bold;
-      }
-
-      .description {
-        font-style: italic;
-      }
-    }
-  }
-
-  @media(hover: hover) {
-    a.contact-card:hover {
-      background: $color-base-0;
-      transition: $transition-default;
-    }
-  }
-}
-/*-------------------------------------*/
-
-/*---------------------------------------
 	Colors
 ---------------------------------------*/
 .color-red {
-  color: $red;
+  //color: $red;
 }
 
 .color-orange {
-  color: $orange;
+  //color: $orange;
 }
 
 .color-blue {
-  color: $blue;
+  //color: $blue;
 }
 /*-------------------------------------*/
