--- a/base/_base.scss
+++ b/base/_base.scss
@@ -839,6 +839,10 @@ button.icon-button.simple:active,
   }
 }
 
+.align-left {
+  text-align: left;
+}
+
 .align-right {
   text-align: right;
 }
@@ -1887,8 +1891,35 @@ p.version {
     margin-right: auto;
   }
 }
-
 /*-------------------------------------*/
+
+/*---------------------------------------
+	Max width in REM
+---------------------------------------*/
+.mw-15 {
+  max-width: 15rem;
+}
+
+.mw-16 {
+  max-width: 16rem;
+}
+
+.mw-17 {
+  max-width: 17rem;
+}
+
+.mw-18 {
+  max-width: 18rem;
+}
+
+.mw-19 {
+  max-width: 19rem;
+}
+
+.mw-20 {
+  max-width: 20rem;
+}
+
 
 /*---------------------------------------
 	Padding removers
@@ -1930,6 +1961,32 @@ p.version {
   margin-left: 0;
 }
 
+/*-------------------------------------*/
+
+/*---------------------------------------
+	Hide on mobile screens
+---------------------------------------*/
+@media (max-width: 800px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+/*-------------------------------------*/
+
+/*---------------------------------------
+	Set element position to relative
+---------------------------------------*/
+.relative {
+  position: relative;
+}
+/*-------------------------------------*/
+
+/*---------------------------------------
+	Remove margin
+---------------------------------------*/
+.no-margin {
+  margin: 0;
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
