--- a/betta-next.css
+++ b/betta-next.css
@@ -1118,6 +1118,10 @@ button.icon-button.simple:active,
     text-align: center;
   }
 }
+.align-left {
+  text-align: left;
+}
+
 .align-right {
   text-align: right;
 }
@@ -2087,6 +2091,33 @@ p.version {
 }
 /*-------------------------------------*/
 /*---------------------------------------
+	Max width in REM
+---------------------------------------*/
+.mw-15 {
+  max-width: 15rem;
+}
+
+.mw-16 {
+  max-width: 16rem;
+}
+
+.mw-17 {
+  max-width: 17rem;
+}
+
+.mw-18 {
+  max-width: 18rem;
+}
+
+.mw-19 {
+  max-width: 19rem;
+}
+
+.mw-20 {
+  max-width: 20rem;
+}
+
+/*---------------------------------------
 	Padding removers
 ---------------------------------------*/
 .p-t-0 {
@@ -2123,6 +2154,31 @@ p.version {
 
 .m-l-0 {
   margin-left: 0;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
+	Hide on mobile screens
+---------------------------------------*/
+@media (max-width: 800px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+/*-------------------------------------*/
+/*---------------------------------------
+	Set element position to relative
+---------------------------------------*/
+.relative {
+  position: relative;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
+	Remove margin
+---------------------------------------*/
+.no-margin {
+  margin: 0;
 }
 
 /*-------------------------------------*/
@@ -2487,15 +2543,6 @@ b {
 }
 
 /*
-Small text, used for fine-print or copy-
-right notices, does not make the text
-less important.
-*/
-small {
-  font-size: 0.8rem;
-}
-
-/*
 Emphasized text, used to stress emphasis.
 Changes the meaning of a sentence, depen-
 ding on what word(s) it's applied to.
@@ -2504,122 +2551,34 @@ neither does it make the text more impor-
 tant.
 */
 em {
-  font-style: normal;
+  font-style: italic;
   font-weight: bold;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.07rem;
 }
 
 /*
 Important text, used to give a sense of
 urgency and seriousness.
 */
-/*-------------------------------------*/
-/*---------------------------------------
-	Handwriting
----------------------------------------*/
-.handwriting {
-  font-family: "Caveat" !important;
-}
-
-/*-------------------------------------*/
-.no-margin {
-  margin: 0;
-}
-
-/*---------------------------------------
-	Set element position to relative
----------------------------------------*/
-.relative {
-  position: relative;
-}
-
-/*-------------------------------------*/
-/*---------------------------------------
-	Hide on mobile screens
----------------------------------------*/
-@media (max-width: 800px) {
-  .hide-on-mobile {
-    display: none;
-  }
-}
-/*-------------------------------------*/
-/*---------------------------------------
-	Contact Cards
----------------------------------------*/
-.contacts-filter-button {
-  margin: 0.5rem;
-}
-
-.contacts {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: masonry;
-  grid-gap: 2rem;
-}
-@media (max-width: 800px) {
-  .contacts {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 400px) {
-  .contacts {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-.contacts .contact-card {
-  padding: 0 0.75rem;
-  border-radius: 1rem;
-  text-align: center;
-  box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.2);
-}
-.contacts .contact-card.hide {
-  display: none;
-}
-.contacts .contact-card h2 {
-  line-height: 0;
-}
-.contacts .contact-card .cover {
-  padding: 2rem 2rem 0 2rem;
-}
-.contacts .contact-card .cover img {
-  width: 100%;
-  max-width: 50vw;
-}
-.contacts .contact-card .content {
-  padding: 1rem 0;
-}
-.contacts .contact-card .content p {
-  margin: 0;
-}
-.contacts .contact-card .content .title {
+strong {
+  text-transform: uppercase;
   font-weight: bold;
+  letter-spacing: 0.07rem;
 }
-.contacts .contact-card .content .description {
-  font-style: italic;
-}
-@media (hover: hover) {
-  .contacts a.contact-card:hover {
-    background: #fafafa;
-    transition: 0.2s;
-  }
+
+/*
+Small text, used for fine-print or copy-
+right notices, does not make the text
+less important.
+*/
+small {
+  font-size: 0.8rem;
 }
 
 /*-------------------------------------*/
 /*---------------------------------------
 	Colors
 ---------------------------------------*/
-.color-red {
-  color: #B71C1C;
-}
-
-.color-orange {
-  color: #E65100;
-}
-
-.color-blue {
-  color: #0D47A1;
-}
-
 /*-------------------------------------*/
 /* All possible form elements
 input,
@@ -2818,18 +2777,6 @@ form > button.icon-button {
 
 .dark form label {
   color: #ffffff;
-}
-
-.google-maps {
-  width: 100%;
-  height: 15rem;
-  border: 0;
-  border-radius: 0.25rem;
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
-}
-
-.dark .google-maps {
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.9);
 }
 
 /*---------------------------------------
@@ -3174,6 +3121,68 @@ form > button.icon-button {
     visibility: hidden;
   }
 }
+/*---------------------------------------
+	Contact Cards
+---------------------------------------*/
+.contacts-filter-button {
+  margin: 0.5rem;
+}
+
+.contacts {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: masonry;
+  grid-gap: 2rem;
+}
+@media (max-width: 800px) {
+  .contacts {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 400px) {
+  .contacts {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.contacts .contact-card {
+  padding: 0 0.75rem;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.2);
+}
+.contacts .contact-card.hide {
+  display: none;
+}
+.contacts .contact-card h2 {
+  line-height: 0;
+}
+.contacts .contact-card .cover {
+  padding: 2rem 2rem 0 2rem;
+}
+.contacts .contact-card .cover img {
+  width: 100%;
+  max-width: 50vw;
+}
+.contacts .contact-card .content {
+  padding: 1rem 0;
+}
+.contacts .contact-card .content p {
+  margin: 0;
+}
+.contacts .contact-card .content .title {
+  font-weight: bold;
+}
+.contacts .contact-card .content .description {
+  font-style: italic;
+}
+@media (hover: hover) {
+  .contacts a.contact-card:hover {
+    background: #fafafa;
+    transition: 0.2s;
+  }
+}
+
+/*-------------------------------------*/
 header {
   width: 100%;
   margin: 0 auto;
