--- a/betta.scss
+++ b/betta.scss
@@ -8,22 +8,19 @@ A project by Isak Combrinck & Dahman Ramdani.
 
 @import 'vendors/normalize.scss';
 
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
 @import 'abstracts/variables';
 
 @import 'base/base';
 @import 'base/animations';
 @import 'base/typography';
-@import 'base/utilities';
 
 @import 'experimental/alpha';
 
 @import 'components/form';
-@import 'components/google-maps';
 @import 'components/image-strip';
 @import 'components/menu';
 @import 'components/tooltip';
+@import 'components/contact_card';
 
 @import 'layout/header';
 @import 'layout/loader';
