--- a/components/_menu.scss
+++ b/components/_menu.scss
@@ -10,6 +10,13 @@
   z-index: 10;
   background: $color-white;
   transition: $transition-slow;
+
+  &.show {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    overflow: hidden;
+  }
 }
 
 .dark #betta_menu {
